Setup eslint + prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src/**/*", "./.eslintrc.js"]
+  "include": ["**/*.ts", "**/*.tsx", "prettier.config.js", ".eslintrc.js"]
 }
