fix: show fallback

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@kopenkinda/react",
+  "name": "@undefined/react",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "private": false,
   "author": {
     "email": "hi@kopenkin.tech",
     "name": "Kopenkin Dmitrii",
