--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,26 +1,40 @@
-name: Publish
+name: Release
+
 on:
   push:
     branches:
-      - "main"
+      - master
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+permissions:
+  contents: read
 
 jobs:
-  build:
+  release:
+    permissions:
+      # for changesets/action
+      contents: write
+      pull-requests: write
+    name: Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
         with:
-          node-version: 18.x
-          cache: "yarn"
+          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
+          fetch-depth: 0
 
-      - run: yarn install --frozen-lockfile
-      - name: Create Release Pull Request or Publish
-        id: changesets
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: Install Dependencies
+        run: yarn
+
+      - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
-          publish: yarn build
+          publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
