--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
+      - name: Build package
+        run: yarn build
+
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
